large screen device responsive

--- a/index.html
+++ b/index.html
@@ -98,45 +98,27 @@
                         <!-- Carousel items   -->
                         <div class="carousel-item active">
                             <div class="carousel-caption">
-                                <div class="row">
-                                    <div class="col-lg-6">
-                                        <div class="fadeUp item_img">
-                                            <img src="src/assets/img/carousel/chicken-caesar-pizza.png" alt="sample">
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-6">
-                                        <div class="fadeUp fade-slow item_details">
-                                            <div class="item_badge">
-                                                <span class="badge_btext"><sup>$</sup> 12.99</span>
-                                            </div>
-                                            <h4 class="item_name">Chicken Caesar Pizza</h4>
-                                            <div class="item_link_box">
-                                                <a href="#reservation" class="item_link page-scroll">
-                                                    <i class="icon-shopping"></i>
-                                                    <span>Make Reservation</span>
-                                                </a>
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-lg-6">
+                                            <div class="fadeUp item_img">
+                                                <img src="src/assets/img/carousel/chicken-caesar-pizza.png" alt="sample">
                                             </div>
                                         </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- <div class="carousel-item">
-                            <div class="carousel-caption">
-                                <div class="fadeUp item_img">
-                                    <img src="src/assets/img/carousel/taco.png" alt="sample">
-                                </div>
-                                <div class="fadeUp fade-slow item_details">
-                                    <div class="item_badge">
-                                        <span class="badge_btext"><sup>$</sup> 12.99</span>
-                                    </div>
-                                    <h4 class="item_name">Mexican Chicken Tacos</h4>
-                                    <div class="item_link_box">
-                                        <a href="#reservation" class="item_link page-scroll">
-                                            <i class="icon-shopping"></i>
-                                            <span>Make Reservation</span>
-                                        </a>
+                                        <div class="col-lg-6">
+                                            <div class="fadeUp fade-slow item_details">
+                                                <div class="item_badge">
+                                                    <span class="badge_btext"><sup>$</sup> 12.99</span>
+                                                </div>
+                                                <h4 class="item_name">Chicken Caesar Pizza</h4>
+                                                <div class="item_link_box">
+                                                    <a href="#reservation" class="item_link page-scroll">
+                                                        <i class="icon-shopping"></i>
+                                                        <span>Make Reservation</span>
+                                                    </a>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -144,39 +126,27 @@
 
                         <div class="carousel-item">
                             <div class="carousel-caption">
-                                <div class="fadeUp item_img">
-                                    <img src="src/assets/img/carousel/double-burger.png" alt="sample">
-                                </div>
-                                <div class="fadeUp fade-slow item_details">
-                                    <div class="item_badge">
-                                        <span class="badge_btext"><sup>$</sup> 12.99</span>
-                                    </div>
-                                    <h4 class="item_name">Perfect Double Burger</h4>
-                                    <div class="item_link_box">
-                                        <a href="#reservation" class="item_link page-scroll">
-                                            <i class="icon-shopping"></i>
-                                            <span>Make Reservation</span>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="carousel-item">
-                            <div class="carousel-caption">
-                                <div class="fadeUp item_img">
-                                    <img src="src/assets/img/carousel/cocktail.png" alt="sample">
-                                </div>
-                                <div class="fadeUp fade-slow item_details">
-                                    <div class="item_badge">
-                                        <span class="badge_btext"><sup>$</sup> 12.99</span>
-                                    </div>
-                                    <h4 class="item_name">Pink Martini Cocktail</h4>
-                                    <div class="item_link_box">
-                                        <a href="#reservation" class="item_link page-scroll">
-                                            <i class="icon-shopping"></i>
-                                            <span>Make Reservation</span>
-                                        </a>
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-lg-6">
+                                            <div class="fadeUp item_img">
+                                                <img src="src/assets/img/carousel/taco.png" alt="sample">
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-6">
+                                            <div class="fadeUp fade-slow item_details">
+                                                <div class="item_badge">
+                                                    <span class="badge_btext"><sup>$</sup> 12.99</span>
+                                                </div>
+                                                <h4 class="item_name">Mexican Chicken Tacos</h4>
+                                                <div class="item_link_box">
+                                                    <a href="#reservation" class="item_link page-scroll">
+                                                        <i class="icon-shopping"></i>
+                                                        <span>Make Reservation</span>
+                                                    </a>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -184,23 +154,87 @@
 
                         <div class="carousel-item">
                             <div class="carousel-caption">
-                                <div class="fadeUp item_img">
-                                    <img src="src/assets/img/carousel/salad.png" alt="sample">
-                                </div>
-                                <div class="fadeUp fade-slow item_details">
-                                    <div class="item_badge">
-                                        <span class="badge_btext"><sup>$</sup> 12.99</span>
-                                    </div>
-                                    <h4 class="item_name">Grilled Chicken Salad</h4>
-                                    <div class="item_link_box">
-                                        <a href="#reservation" class="item_link page-scroll">
-                                            <i class="icon-shopping"></i>
-                                            <span>Make Reservation</span>
-                                        </a>
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-lg-6">
+                                            <div class="fadeUp item_img">
+                                                <img src="src/assets/img/carousel/double-burger.png" alt="sample">
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-6">
+                                            <div class="fadeUp fade-slow item_details">
+                                                <div class="item_badge">
+                                                    <span class="badge_btext"><sup>$</sup> 12.99</span>
+                                                </div>
+                                                <h4 class="item_name">Perfect Double Burger</h4>
+                                                <div class="item_link_box">
+                                                    <a href="#reservation" class="item_link page-scroll">
+                                                        <i class="icon-shopping"></i>
+                                                        <span>Make Reservation</span>
+                                                    </a>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div> -->
+                        </div>
+
+                        <div class="carousel-item">
+                            <div class="carousel-caption">
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-lg-6">
+                                            <div class="fadeUp item_img">
+                                                <img src="src/assets/img/carousel/cocktail.png" alt="sample">
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-6">
+                                            <div class="fadeUp fade-slow item_details">
+                                                <div class="item_badge">
+                                                    <span class="badge_btext"><sup>$</sup> 12.99</span>
+                                                </div>
+                                                <h4 class="item_name">Pink Martini Cocktail</h4>
+                                                <div class="item_link_box">
+                                                    <a href="#reservation" class="item_link page-scroll">
+                                                        <i class="icon-shopping"></i>
+                                                        <span>Make Reservation</span>
+                                                    </a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="carousel-item">
+                            <div class="carousel-caption">
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-lg-6">
+                                            <div class="fadeUp item_img">
+                                                <img src="src/assets/img/carousel/salad.png" alt="sample">
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-6">
+                                            <div class="fadeUp fade-slow item_details">
+                                                <div class="item_badge">
+                                                    <span class="badge_btext"><sup>$</sup> 12.99</span>
+                                                </div>
+                                                <h4 class="item_name">Grilled Chicken Salad</h4>
+                                                <div class="item_link_box">
+                                                    <a href="#reservation" class="item_link page-scroll">
+                                                        <i class="icon-shopping"></i>
+                                                        <span>Make Reservation</span>
+                                                    </a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
